--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  qr: ^3.0.2
+  qr_code_scanner_plus: ^2.0.14
+  http: ^1.6.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
