--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.20.2
   geolocator: ^14.0.2
   permission_handler: ^12.0.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
