--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   http: ^1.6.0
   flutter_secure_storage: ^9.2.4
   intl: ^0.20.2
-  geolocator: ^14.0.2
+  # geolocator: ^14.0.2
   permission_handler: ^12.0.1
   qr_flutter: ^4.1.0
 
